--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
 	<packaging>war</packaging>
 	<name>planta-potabilizadora</name>
 	<description>Sistema informatico de la planta potabilizadora La Quebrada</description>
-
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -62,7 +61,7 @@
 			<artifactId>json</artifactId>
 			<version>20180813</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
@@ -71,7 +70,7 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.9.2</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
