--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,20 @@ spring.datasource.url=jdbc:mysql://localhost/plantaPotabilizadora?createDatabase
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+# spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.root=INFO
 
 logging.pattern.console=%msg%n
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} %-5level %logger{36}.%M %msg%n
+# logging.path=logs
+# logging.file=${logging.path}/backend.log
+logging.file.path=logs
+logging.file.name=${logging.file.path}/backend.log
+
+app.session.token.timeout=86400
